# mongomodel

./: .gitignore  Makefile  README.md  __init__.py  document.py  field.py  pyproject.toml  requirements.txt  setup.py
examples/: point.py  user.py
mongomodel/: __init__.py  conf.py  document.py  exceptions.py  field.py  keywords.py  queryset.py  tools.py
mongorm/: __init__.py  conf.py  document.py  field.py
tests/: conftest.py  test_conf.py  test_document.py  test_field.py  test_queryset.py  test_tools.py
