[tool.poetry]
name = "mongomodel"
version = "0.5.3"
description = "Tiny mongodb orm document oriented"
authors = ["Sébastien NICOLET <snicolet@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = "^5.0.3"
mock = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
